src/test/deca/context/valid/heritage_et_test_methode.deca
// Description
// on test l Accès aux méthodes héritées depuis la class mère


// Resultats :
// ok


class Manager {
    int experience;

    void displayExperience() {
        println(experience);
    }
}

class AssistantCoach extends Manager {
    void show() {
        displayExperience();
    }
}

{
    AssistantCoach ac;
    ac = new AssistantCoach();
    ac.experience = 15;
    ac.show();
}
