src/test/deca/context/invalid/methode_fantome.deca
// Description :
// Appel d'une methode fantome ...
//
// Resultats :
// Echec
class Joueur {
    int numero;
}
{
    Joueur xavi;
    xavi = new Joueur();
    xavi.faireLeTikiTaka();
}
